// =====================================================
// HACKATÓN TOKA - ESQUEMA FINAL
// Compatible con DBdiagram.io
// =====================================================

// =====================================================
// USUARIOS
// =====================================================
Table users {
  id bigint [pk, increment]
  name varchar(255)
  email varchar(255) [unique]
  password varchar(255)
  coins bigint [default: 1000]
  created_at timestamp
  updated_at timestamp

  indexes {
    email [name: 'users_email_idx', unique]
  }
}

// =====================================================
// CATÁLOGO DE JUEGOS
// =====================================================
Table games {
  id bigint [pk, increment]
  slug varchar(50) [unique]
  name varchar(100)
  description text
  icon varchar(255)
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    slug [name: 'games_slug_idx', unique]
  }
}

// =====================================================
// UMBRALES DE RECOMPENSA (Probabilidades escalables)
// =====================================================
Table game_prizes {
  id bigint [pk, increment]
  game_id bigint [ref: > games.id]
  name varchar(100)
  multiplier decimal(5,2)
  probability decimal(6,5)
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp

  indexes {
    (game_id, is_active) [name: 'game_prizes_game_idx']
  }
}

// =====================================================
// RACHAS DE USUARIO
// =====================================================
Table user_streaks {
  id bigint [pk, increment]
  user_id bigint [unique, ref: > users.id]
  multiplier decimal(4,2) [default: 1.00]
  streak_count int [default: 0]
  last_played_at timestamp
  created_at timestamp
  updated_at timestamp

  indexes {
    user_id [name: 'user_streaks_user_idx', unique]
  }
}

// =====================================================
// HISTORIAL DE JUGADAS
// =====================================================
Table games_history {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  game_id bigint [ref: > games.id]
  game_prize_id bigint [ref: > game_prizes.id]
  bet int
  prize int
  balance_before bigint
  balance_after bigint
  played_at timestamp
  created_at timestamp

  indexes {
    (user_id, played_at) [name: 'games_history_user_idx']
  }
}